# lifelong_learning_assistant

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pyproject.toml
agent/: agent.py
docs/: 01-overview.md  03-architecture.md  DOCS_README.md  README.md  docs-overview.md  pluntuml_diagram_renderer.md
docs/FAQ/: 01-retrievir-indices.md  FAQ_README.md  faq-overview.md
docs/components/: index.md
docs/components/cards/: async-processing.md  data-sources.md  functional-modules.md  index.md  llm-service.md  observability.md  orchestrator.md  retriever.md  security.md  storage.md  web-ui.md
docs/components/deep/: async-processing.md  data-sources.md  functional-modules.md  llm-service.md  observability.md  orchestrator.md  retriever.md  security.md  storage.md  web-ui.md
docs/diagrams-src/01-overview/: system-diagram.puml
docs/diagrams-src/03-architecture/: quick-qa-sequence.puml  quiz-generation-sequence.puml
docs/diagrams_src/01-overview/: system-diagram.puml
llm_service/: .gitignore  llm_client.py  pyproject.toml  settings.py
rag/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
rag/app/: config.py  rag_service.py  retriever.py
rag/notebook/: rag_etl_loader.ipynb  rag_evaluation_results.csv  rag_metrics_evaluation.ipynb
