[project]
name = "rag-llm-cource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastembed>=0.7.4",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.21",
]
